--- a/catalog.html
+++ b/catalog.html
@@ -113,9 +113,9 @@
             <br>
 					  <span class="item-title-name">«Baxter of California»</span>
           </div>
-					<div class="item-action">
-						<span class="item-action-price">2 900 руб.</span>
-	  				<a class="item-action-buy" href="#">Купить</a>
+					<div class="catalog-action">
+						<span class="catalog-action-price">2 900 руб.</span>
+	  				<a class="catalog-action-buy" href="#">Купить</a>
  					</div>
   			</article>
   			<article class="catalog-content-item">
@@ -125,9 +125,9 @@
             <br>
             <span class="item-title-name">«Baxter of California»</span>
           </div>
-          <div class="item-action">
-            <span class="item-action-price">750 руб.</span>
-            <a class="item-action-buy" href="#">Купить</a>
+          <div class="catalog-action">
+            <span class="catalog-action-price">750 руб.</span>
+            <a class="catalog-action-buy" href="#">Купить</a>
           </div>
   			</article>
   			<article class="catalog-content-item">
@@ -137,9 +137,9 @@
             <br>
             <span class="item-title-name">«SUAVECITO»</span>
           </div>
-          <div class="item-action">
-            <span class="item-action-price">290 руб.</span>
-            <a class="item-action-buy" href="#">Купить</a>
+          <div class="catalog-action">
+            <span class="catalog-action-price">290 руб.</span>
+            <a class="catalog-action-buy" href="#">Купить</a>
           </div>
   			</article>
   			<article class="catalog-content-item">
@@ -149,9 +149,9 @@
             <br>
             <span class="item-title-name">«American crew»</span>
           </div>
-          <div class="item-action">
-            <span class="item-action-price">500 руб.</span>
-            <a class="item-action-buy" href="#">Купить</a>
+          <div class="catalog-action">
+            <span class="catalog-action-price">500 руб.</span>
+            <a class="catalog-action-buy" href="#">Купить</a>
           </div>
   			</article>
   			<article class="catalog-content-item">
@@ -161,9 +161,9 @@
             <br>
             <span class="item-title-name">«American crew»</span>
           </div>
-          <div class="item-action">
-            <span class="item-action-price">300 руб.</span>
-            <a class="item-action-buy" href="#">Купить</a>
+          <div class="catalog-action">
+            <span class="catalog-action-price">300 руб.</span>
+            <a class="catalog-action-buy" href="#">Купить</a>
           </div>
   			</article>
   			<article class="catalog-content-item">
@@ -173,9 +173,9 @@
             <br>
             <span class="item-title-name">«Baxter of California»</span>
           </div>
-          <div class="item-action">
-            <span class="item-action-price">3 900 руб.</span>
-            <a class="item-action-buy" href="#">Купить</a>
+          <div class="catalog-action">
+            <span class="catalog-action-price">3 900 руб.</span>
+            <a class="catalog-action-buy" href="#">Купить</a>
           </div>
   			</article>
   			<ul class="catalog-content-pages">
