--- a/item.html
+++ b/item.html
@@ -7,7 +7,7 @@
   </head>
   <body>
   	<header class="main-header">
-  	  <div class="container">
+  	  <div class="container clearfix">
   	  	<nav class="main-navigation">
 					<ul>
             <li>
@@ -35,7 +35,7 @@
   	  	</div>
   	  </div>
   	</header>
-  	<div class="item-content">
+  	<main class="container clearfix">
 	  	<h1 class="item-content-title">Набор для путешествий «Baxter of California»</h1>
 	  	<ul class="item-content-breadcrumbs">
 	  		<li>
@@ -51,50 +51,48 @@
            <a class="breadcrumbs-highlighted" href="#">Набор для путешествий «Baxter of California»</a>
         </li>
 	  	</ul>
-      <main class="container">
-        <div class="item-content-left">
-          <figure class="item-content-slider">
-            <img src="img/item-photo-1.jpg" width="486" height="524" class="slider-big" alt="Вид-1">
-            <div class="slider-small">
-              <img src="img/item-photo-2.jpg" width="166" height="175" alt="Вид-2">
-              <img src="img/item-photo-3.jpg" width="166" height="175" alt="Вид-3">
-              <img src="img/item-photo-4.jpg" width="166" height="175" alt="Вид-4">
-            </div>
-          </figure>
-        </div>
-        <div class="item-content-right">
-          <div class="item-content-about">
-            <span class="about-availability">Есть в наличии</span>
-            <span class="about-vendor-code">Артикул: dexter-ae</span>
-            <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+      <div class="item-content-left">
+        <figure class="item-content-slider">
+          <img src="img/item-photo-1.jpg" width="460" height="500" class="slider-big" alt="Вид-1">
+          <div class="slider-small">
+            <img src="img/item-photo-2.jpg" width="140" height="150" alt="Вид-2">
+            <img src="img/item-photo-3.jpg" width="140" height="150" alt="Вид-3">
+            <img src="img/item-photo-4.jpg" width="140" height="150" alt="Вид-4">
           </div>
-          <div class="item-action">
-            <span class="item-action-price">2 900 руб.</span>
-            <a class="item-action-buy" href="#">Купить</a>
-          </div>
-          <div class="item-content-name">В набор входят:</div>
-          <ul class="item-list">
-            <li>
-            Средство для умывания (50 мл)
-            </li>
-            <li>
-            Увлажняющий крем (50 мл)
-            </li>
-            <li>
-            Крем для бритья (50 мл)
-            </li>
-            <li>
-            Крем после бритья, шампунь (50 мл)
-            </li>
-            <li>
-            Удобная кожаная косметичка
-            </li>
-          </ul>
+        </figure>
+      </div>
+      <div class="item-content-right">
+        <div class="item-content-about">
+          <span class="about-availability">Есть в наличии</span>
+          <span class="about-vendor-code">Артикул: dexter-ae</span>
+          <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
         </div>
-      </main>
-    </div> 
+        <div class="item-action">
+          <span class="item-action-price">2 900 руб.</span>
+          <a class="item-action-buy" href="#">Купить</a>
+        </div>
+        <div class="item-content-name">В набор входят:</div>
+        <ul class="item-list">
+          <li>
+          Средство для умывания (50 мл)
+          </li>
+          <li>
+          Увлажняющий крем (50 мл)
+          </li>
+          <li>
+          Крем для бритья (50 мл)
+          </li>
+          <li>
+          Крем после бритья, шампунь (50 мл)
+          </li>
+          <li>
+          Удобная кожаная косметичка
+          </li>
+        </ul>
+      </div>
+    </main>
   	<footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
